--- a/wfshdec-test/css/style.css
+++ b/wfshdec-test/css/style.css
@@ -16,9 +16,9 @@ h2 {
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
   border-radius: 10px;
 }
-.navbar .nav-link{
+.navbar .nav-item{
   float: right;
-  width: 5em;
+  width: 6em;
 }
 .navbar .nav-link:hover{
   font-weight: bold;
