--- a/wfshdec-test/css/style.css
+++ b/wfshdec-test/css/style.css
@@ -16,7 +16,7 @@ h2 {
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
   border-radius: 10px;
 }
-.navbar .navbar-nav{
+.navbar .nav-item{
   float: right;
   width: 72px;
   text-align: center;
