update nav color

--- a/wfshdec-test/css/style.css
+++ b/wfshdec-test/css/style.css
@@ -50,7 +50,7 @@ h2 {
 }
 .navbar a.nav-link,
 .navbar .navbar-brand {
-    color: #000;
+    color: #fff;
     transition: color 0.3s;
     white-space: nowrap;
 }
@@ -241,13 +241,20 @@ footer {
 
 @media screen and (max-width:992px) {
     .navbar:has(> .container > .down-nav > #navbarNav.navbar-collapse.collapse.show) {
-    background-color: #fff;
-}
+        background-color: #fff;
+    }
     .down-nav {
         width: 100%;
         justify-items: center;
     }
     .down-nav .nav-link {
         width: 100%;
+    }
+    .navbar-collapse.collapse.show a.nav-link
+    {
+        color: #000;
+    }
+    .navbar:has(> .container > .down-nav > #navbarNav.navbar-collapse.collapse.show) .navbar-brand {
+        color: #000;
     }
 }
